adding treasurer@ - aliased to deepa, samar, archive

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -76,6 +76,7 @@ legal@gnome.org director@gnome.org, aday@gnome.org, ramcq@gnome.org, foundation-
 bookkeeper@gnome.org rebecca.selin.services@gmail.com, foundation-staff-archive@gnome.org
 accounting@gnome.org zana@gnome.org,akuci@gnome.org,director@gnome.org, foundation-staff-archive@gnome.org
 accounts@gnome.org accounting@gnome.org
+treasurer@gnome.org dvenkatraman, ssyal, foundation-staff-archive@gnome.org
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
