roles: add myself to GIMP's donations email.
While at Wilber Week, mitch told me of the existence of this email
address!

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -103,7 +103,7 @@ defendus@gnome.org zana@gnome.org,director@gnome.org,foundation-staff-archive@gn
 
 # Alias used for donations taken on behalf of the GIMP project
 # Rosanna Yuen, Michael Natterer, Michael Schumacher
-gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de, director@gnome.org, financial-transactions-archive@gnome.org
+gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de, director@gnome.org, financial-transactions-archive@gnome.org, jehan@gimp.org
 
 # Personal aliases.
 aday@gnome.org allanday@gnome.org
