add 'president@' for P and VP

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -69,6 +69,9 @@ sponsorship@gnome.org info@gnome.org
 support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
 
+# Presidency
+president@gnome.org ramcq@gnome.org, aday@gnome.org, foundation-staff-archive@gnome.org
+
 # Legal
 legal@gnome.org director@gnome.org, aday@gnome.org, ramcq@gnome.org, foundation-staff-archive@gnome.org
 
