add 'pants-nomination@' for future guadecs

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -30,9 +30,9 @@ jobs@gnome.org webmaster@gnome.org
 gnome-mirror-admins@gnome.org archive@ftp.sunet.se,help@mirrorservice.org,veillard@redhat.com,webmaster@cse.buffalo.edu,ftp-adm@accum.se,Fabrice.Bellet@creatis.insa-lyon.fr,ftp-admin@is.naist.jp,ftp@df.lth.se,mirror@artfiles.org,ftpadmin@is.co.za,help@mirrorservice.org,mirror@mirror.umd.edu,ftpmirror-beheer@nluug.nl,dakulov@maxcdn.com,support@osuosl.org,stephenpcg@gmail.com,noc@nbtelecom.com.br,adrian.reber@hs-esslingen.de,board@muug.mb.ca,rrze-ftp-admins@fau.de,staff@dotsrc.org,my@yaoge123.com,support@gethosted.online
 
 # GUADEC
-
 guadec-logos@gnome.org guadec-planning@gnome.org
-guadec@gnome.org zana@gnome.org, kprogri@gnome.org, foundation-staff-archive@gnome.org
+guadec@gnome.org director@gnome.org, zana@gnome.org, kprogri@gnome.org, foundation-staff-archive@gnome.org
+pants-nomination@gnome.org president@gnome.org, director@gnome.org
 
 # On request from Ekaterina Gerasimova on 2016-02-04
 patreon@gnome.org kat@gnome.org
@@ -42,12 +42,9 @@ guadec-feedback@gnome.org guadec-planning@gnome.org
 visa-invitations@gnome.org marinaz@redhat.com, twtyau@gmail.com, sragavan@gnome.org, lists@andreasn.se
 
 # Old mailing lists forwards
-
 gnomemeeting-list@gnome.org ekiga-list@gnome.org
 gnomemeeting-devel-list@gnome.org ekiga-devel-list@gnome.org
-
 gnome-love@gnome.org newcomers-list@gnome.org
-
 soc-mentors-list@gnome.org mentors-list@gnome.org
 gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 
