--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -78,6 +78,9 @@ accounting@gnome.org zana@gnome.org,akuci@gnome.org,director@gnome.org, foundati
 accounts@gnome.org accounting@gnome.org
 treasurer@gnome.org dvenkatraman, ssyal, foundation-staff-archive@gnome.org
 
+# Fiscal Hosting
+reimbursements@gnome.org president@gnome.org, director@gnome.org, treasurer@gnome.org
+
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
 
