Mark e-mails from this domain as spam

--- a/roles/postfix.server/templates/access-sender.j2
+++ b/roles/postfix.server/templates/access-sender.j2
@@ -86,3 +86,5 @@ mag2-letter.com         REJECT Spam
 .mag2-letter.com        REJECT Spam
 mag2sender.com          REJECT Spam
 .mag2sender.com         REJECT Spam
+
+e.tspb.org.tr           REJECT Spam
