--- a/roles/postfix.server/templates/access-rbl-exception-client.j2
+++ b/roles/postfix.server/templates/access-rbl-exception-client.j2
@@ -1,5 +1,5 @@
 #######################
-## MANAGED BY PUPPET ##
+## MANAGED BY ANSIBLE ##
 #######################
 #
 # Put exceptions to RBL blocklisting here
