--- a/roles/postfix.server/templates/mime_header_checks.j2
+++ b/roles/postfix.server/templates/mime_header_checks.j2
@@ -1,5 +1,5 @@
 #######################
-## MANAGED BY PUPPET ##
+## MANAGED BY ANSIBLE ##
 #######################
 
 /filename=\"?(.*)\.(bat|chm|cmd|com|do|exe|hta|jse|rm|scr|pif|vbe|vbs|vxd|xl)\"?$/  REJECT For security reasons we reject attachments of this type
