--- a/roles/postfix.server/templates/postmap/transport.j2
+++ b/roles/postfix.server/templates/postmap/transport.j2
@@ -1,10 +1,10 @@
 #######################
-## MANAGED BY PUPPET ##
+## MANAGED BY ANSIBLE ##
 #######################
 
 devnull@gnome.org discard:silently
 devnull@smtp.gnome.org discard:silently
 
 #######################
-## MANAGED BY PUPPET ##
+## MANAGED BY ANSIBLE ##
 #######################
