--- a/roles/postfix.server/templates/access-recipient.j2
+++ b/roles/postfix.server/templates/access-recipient.j2
@@ -1,5 +1,5 @@
 #######################
-## MANAGED BY PUPPET ##
+## MANAGED BY ANSIBLE ##
 #######################
 #
 # Some mail is just plain annoying - this is here to stop it
