--- a/roles/postfix.server/templates/body_checks.j2
+++ b/roles/postfix.server/templates/body_checks.j2
@@ -1,5 +1,5 @@
 #######################
-## MANAGED BY PUPPET ##
+## MANAGED BY ANSIBLE ##
 #######################
 #
 # Political spam about Israel
