Add myself to ftp-release-notifications

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -416,7 +416,7 @@ spamtrap@gnome.org spamtrap@staff-mail.gnome.org
 board-list@gnome.org gitlab-servicedesk-forwarder@gnome.org
 code-of-conduct-committee@gnome.org gitlab-servicedesk-forwarder@gnome.org
 docs-feedback@gnome.org gitlab-servicedesk-forwarder@gnome.org
-ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org, pacho@gentoo.org, kalevlember@gmail.com, jbicha@ubuntu.com, emilyyrose@gmail.com, casaxa@gmail.com, nathan.teodosio@canonical.com, jarred.wilson12@gmail.com
+ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org, pacho@gentoo.org, kalevlember@gmail.com, jbicha@ubuntu.com, emilyyrose@gmail.com, casaxa@gmail.com, nathan.teodosio@canonical.com, jarred.wilson12@gmail.com, alessandro.astone@canonical.com
 fundraising@gnome.org board@gnome.org, zana@gnome.org, director@gnome.org, foundation-staff-archive@gnome.org
 gitlab-abuse-reports@gnome.org gitlab-servicedesk-forwarder@gnome.org
 travel-committee@gnome.org travel-committee@discourse.gnome.org
