Director => aday, ramcq, arunsr

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -67,10 +67,10 @@ support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
 
 # Presidency
-president@gnome.org ramcq@gnome.org, aday@gnome.org, foundation-staff-archive@gnome.org
+president@gnome.org aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
 
 # Legal
-legal@gnome.org director@gnome.org, aday@gnome.org, ramcq@gnome.org, foundation-staff-archive@gnome.org
+legal@gnome.org director@gnome.org, aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
 
 # Accounting aliases
 bookkeeper@gnome.org rebecca.selin.services@gmail.com, foundation-staff-archive@gnome.org
@@ -85,9 +85,9 @@ reimbursements@gnome.org president@gnome.org, director@gnome.org, treasurer@gnom
 hiring-committee@gnome.org edsearch-list@gnome.org
 
 # 2024 Contractor Positions
-flathub@gnome.org ramcq@gnome.org,allanday@gnome.org,bpiotrowski,director@gnome.org
-wellbeing@gnome.org ramcq@gnome.org,allanday@gnome.org,pwithnall@gnome.org,director@gnome.org
-developmentfund@gnome.org ramcq@gnome.org,allanday@gnome.org,jsparber@gnome.org
+flathub@gnome.org allanday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, bpiotrowski, director@gnome.org
+wellbeing@gnome.org allanday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, pwithnall@gnome.org, director@gnome.org
+developmentfund@gnome.org allanday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, jsparber@gnome.org
 
 # University Outreach (https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/254)
 universityoutreach@gnome.org kprogri@gnome.org, nkemregina@gnome.org
@@ -123,7 +123,8 @@ richard@gnome.org rlittauer
 rosanna@gnome.org zana
 schuirmann@gnome.org lschuirma@gnome.org
 seb128@gnome.org sbacher@gnome.org
-steven@gnome.org sdeobald
+# TODO: remove sdeobald from alias after 2025-08-29:
+steven@gnome.org sdeobald, aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
 ten@gnome.org ten@ximian.com
 terra@gnome.org mortenw@gnome.org
 thib@gnome.org thibaultamartin@gnome.org
@@ -170,7 +171,7 @@ gnome-contribs@gnome.org joakim@helixcode.com, miguel@helixcode.com
 gnome-press-contact@gnome.org engagement-private@gnome.org
 gnome-press-team@gnome.org engagement-private@gnome.org
 
-director@gnome.org sdeobald
+director@gnome.org aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org
 tutorials@gnome.org director@gnome.org
 executive@gnome.org director@gnome.org
 
