Remove sdeobald from steven@

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -123,8 +123,7 @@ richard@gnome.org rlittauer
 rosanna@gnome.org zana
 schuirmann@gnome.org lschuirma@gnome.org
 seb128@gnome.org sbacher@gnome.org
-# TODO: remove sdeobald from alias after 2025-08-29:
-steven@gnome.org sdeobald, aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
+steven@gnome.org aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
 ten@gnome.org ten@ximian.com
 terra@gnome.org mortenw@gnome.org
 thib@gnome.org thibaultamartin@gnome.org
