Land an alias for allan@g.o

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -110,6 +110,7 @@ gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de, director@gnome.o
 
 # Personal aliases.
 aday@gnome.org allanday@gnome.org
+allan@gnome.org allanday@gnome.org
 alexm@gnome.org alicem@gnome.org
 anisa@gnome.org akuci
 bart@gnome.org bpiotrowski
