--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -340,7 +340,7 @@ gtk-social@gnome.org ebassi@gnome.org
 lorry-controller-gitlab-bot@gnome.org gnome-sysadmin@gnome.org
 
 # STF (requested by Sonny Piers)
-stf@gnome.org tbernard@gnome.org, thibaultamartin@gnome.org, rlittauer@gnome.org, adrianvovk@gmail.com
+stf@gnome.org tbernard@gnome.org, adrianvovk@gmail.com, president@gnome.org, accounting@gnome.org
 
 # Spamtrap
 /^.*@cvs.gnome.org$/ spamtrap@gnome.org
