--- a/roles/prometheus/templates/alerting.rules.j2
+++ b/roles/prometheus/templates/alerting.rules.j2
@@ -26,6 +26,7 @@ groups:
       summary: "{% raw %}Instance {{ $labels.instance }} has less than 20% of RAM available{% endraw %}"
   - alert: High disk usage
     expr: (node_filesystem_size_bytes - node_filesystem_avail_bytes) /  node_filesystem_size_bytes > 0.9
+    for: 3h
     annotations:
       summary: "{% raw %}Instance {{ $labels.instance }} has less than 10% of free space available on {{ $labels.mountpoint }}{% endraw %}"
   - alert: High inodes usage
