Tidy Foundation email addresses
Improve comments and grouping.

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -48,41 +48,41 @@ gnome-love@gnome.org newcomers-list@gnome.org
 soc-mentors-list@gnome.org mentors-list@gnome.org
 gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 
-# Licensing, Board of Directors, donations
+# Board of Directors > issue tracker
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
-# Staff and general info
+# Foundation general
 info@gnome.org president@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
+microblog@gnome.org info@gnome.org, bpiotrowski, pietrodc@gnome.org, cassidyjames@gnome.org, foundation-staff-archive@gnome.org
+bookkeeper@gnome.org rebecca.selin.services@gmail.com, foundation-staff-archive@gnome.org
+accounting@gnome.org zana@gnome.org,akuci@gnome.org,president@gnome.org, foundation-staff-archive@gnome.org
+
+# Foundation obsolete
 staff@gnome.org president@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org,bpiotrowski,foundation-staff-archive@gnome.org
 events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
 licensing@gnome.org info@gnome.org
-microblog@gnome.org info@gnome.org, bpiotrowski, pietrodc@gnome.org, cassidyjames@gnome.org, foundation-staff-archive@gnome.org
 neil@gnome.org info@gnome.org
 neilm@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
 sponsorship@gnome.org info@gnome.org
 support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
-
-# Presidency
-president@gnome.org aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
-
-# Legal
 legal@gnome.org president@gnome.org, foundation-staff-archive@gnome.org
-
-# Accounting aliases
-bookkeeper@gnome.org rebecca.selin.services@gmail.com, foundation-staff-archive@gnome.org
-accounting@gnome.org zana@gnome.org,akuci@gnome.org,president@gnome.org, foundation-staff-archive@gnome.org
+reimbursements@gnome.org president@gnome.org, treasurer@gnome.org
 accounts@gnome.org accounting@gnome.org
+director@gnome.org president@gnome.org
+tutorials@gnome.org president@gnome.org
+executive@gnome.org president@gnome.org
+
+# Foundation officers
+president@gnome.org aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
 treasurer@gnome.org dvenkatraman, ssyal, foundation-staff-archive@gnome.org
 
-# Fiscal Hosting
-reimbursements@gnome.org president@gnome.org, treasurer@gnome.org
-
-# Hiring Committee
+# Committees
 hiring-committee@gnome.org edsearch-list@gnome.org
+compensation-committee@gnome.org president@gnome.org, treasurer@gnome.org
 
 # 2024 Contractor Positions
 flathub@gnome.org president@gnome.org, bpiotrowski
@@ -171,15 +171,8 @@ gnome-contribs@gnome.org joakim@helixcode.com, miguel@helixcode.com
 gnome-press-contact@gnome.org engagement-private@gnome.org
 gnome-press-team@gnome.org engagement-private@gnome.org
 
-director@gnome.org president@gnome.org
-tutorials@gnome.org president@gnome.org
-executive@gnome.org president@gnome.org
-
 # https://bugzilla.gnome.org/show_bug.cgi?id=796507
 travel-invitations-committee@gnome.org info@gnome.org
-
-# https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/64
-compensation-committee@gnome.org csoriano@gnome.org, ramcq@gnome.org, nuritzi@gnome.org
 
 # https://bugzilla.gnome.org/show_bug.cgi?id=785626
 photos@gnome.org cassandra@gnome.org, nuritzi@gnome.org, adeliar@gnome.org
