Add board email alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -48,8 +48,9 @@ gnome-love@gnome.org newcomers-list@gnome.org
 soc-mentors-list@gnome.org mentors-list@gnome.org
 gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 
-# Board of Directors > issue tracker
+# Board of Directors
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
+board-internal@gnome.org aday@gnome.org, arunsr@gnome.org, cassidyjames@gnome.org, deepa@gnome.org, federico@gnome.org, jsparber@gnome.org, karen@punkrocklawyer.com, lwildberg@gnome.org, mmajadas@gnome.org, ramcq@gnome.org
 
 # Foundation general
 info@gnome.org president@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
