Tidy treasurer email
Restrict for now - we can add back later.

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -79,7 +79,7 @@ executive@gnome.org president@gnome.org
 
 # Foundation officers
 president@gnome.org aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
-treasurer@gnome.org dvenkatraman, ssyal, foundation-staff-archive@gnome.org
+treasurer@gnome.org dvenkatraman, foundation-staff-archive@gnome.org
 
 # Committees
 hiring-committee@gnome.org edsearch-list@gnome.org
