Revert "Disable access to zana's account, point rosanna@ to her personal address"
This reverts commit abb8aeaff9f84a6d221360d2f2ac6248a806c285.

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -122,7 +122,7 @@ kristi@gnome.org kprogri@gnome.org
 misha@gnome.org mishashnurapet@gnome.org
 patrick@gnome.org puiterwijk@gnome.org
 richard@gnome.org rlittauer
-rosanna@gnome.org rosannayuen@gmail.com
+rosanna@gnome.org zana
 schuirmann@gnome.org lschuirma@gnome.org
 seb128@gnome.org sbacher@gnome.org
 steven@gnome.org aday@gnome.org, ramcq@gnome.org, arunsr@gnome.org, foundation-staff-archive@gnome.org
