--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -31,7 +31,7 @@ gnome-mirror-admins@gnome.org archive@ftp.sunet.se,help@mirrorservice.org,veilla
 
 # GUADEC
 guadec-logos@gnome.org guadec-planning@gnome.org
-guadec@gnome.org president@gnome.org, zana@gnome.org, kprogri@gnome.org, foundation-staff-archive@gnome.org
+guadec@gnome.org president@gnome.org, kprogri@gnome.org, foundation-staff-archive@gnome.org
 pants-nomination@gnome.org president@gnome.org
 
 # On request from Ekaterina Gerasimova on 2016-02-04
@@ -53,13 +53,13 @@ board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 board-internal@gnome.org aday@gnome.org, arunsr@gnome.org, cassidyjames@gnome.org, deepa@gnome.org, federico@gnome.org, jsparber@gnome.org, karen@punkrocklawyer.com, lwildberg@gnome.org, mmajadas@gnome.org, ramcq@gnome.org
 
 # Foundation general
-info@gnome.org president@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
+info@gnome.org president@gnome.org,kprogri@gnome.org,akuci@gnome.org
 microblog@gnome.org info@gnome.org, bpiotrowski, pietrodc@gnome.org, cassidyjames@gnome.org, foundation-staff-archive@gnome.org
 bookkeeper@gnome.org rebecca.selin.services@gmail.com, foundation-staff-archive@gnome.org
-accounting@gnome.org zana@gnome.org,akuci@gnome.org,president@gnome.org, foundation-staff-archive@gnome.org
+accounting@gnome.org akuci@gnome.org,president@gnome.org, foundation-staff-archive@gnome.org
 
 # Foundation obsolete
-staff@gnome.org president@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org,bpiotrowski,foundation-staff-archive@gnome.org
+staff@gnome.org president@gnome.org,kprogri@gnome.org,akuci@gnome.org,bpiotrowski,foundation-staff-archive@gnome.org
 events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
@@ -99,15 +99,14 @@ friends@gnome.org  president@gnome.org,financial-transactions-archive@gnome.org
 sponsors@gnome.org president@gnome.org,foundation-staff-archive@gnome.org
 
 # old campaigns
-friends-eu@gnome.org president@gnome.org,zana@gnome.org,foundation-staff-archive@gnome.org
 tshirts@gnome.org drfickle@k-lug.org
 gear@gnome.org drfickle@k-lug.org
 # Groupon fundraising campaign Paypal address
-defendus@gnome.org zana@gnome.org,president@gnome.org,foundation-staff-archive@gnome.org
+defendus@gnome.org president@gnome.org,foundation-staff-archive@gnome.org
 
 # Alias used for donations taken on behalf of the GIMP project
 # Rosanna Yuen, Michael Natterer, Michael Schumacher
-gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de, president@gnome.org, financial-transactions-archive@gnome.org, jehan@gimp.org
+gimp@gnome.org mitch@gimp.org, schumaml@gmx.de, president@gnome.org, financial-transactions-archive@gnome.org, jehan@gimp.org
 
 # Personal aliases.
 aday@gnome.org allanday@gnome.org
@@ -139,7 +138,7 @@ deepa@gnome.org dvenkatraman,foundation-staff-archive@gnome.org
 marketing-list@gnome.org engagement-list@gnome.org
 
 # Used for Amazon Affiliates
-amazon@gnome.org zana@gnome.org, president@gnome.org, foundation-staff-archive@gnome.org
+amazon@gnome.org president@gnome.org, foundation-staff-archive@gnome.org
 
 # Used for Twitter (@GNOMELove)
 gnomelove@gnome.org allanpday@gmail.com
@@ -179,18 +178,11 @@ travel-invitations-committee@gnome.org info@gnome.org
 # https://bugzilla.gnome.org/show_bug.cgi?id=785626
 photos@gnome.org cassandra@gnome.org, nuritzi@gnome.org, adeliar@gnome.org
 
-# Libre Graphics Meeting donations (Davy Neary) (RT#4535)
-lgm@gnome.org dneary@gnome.org,louis.desjardins@gmail.com,kamila.giedrojc@gmail.com,jon@rejon.org,zana@gnome.org,foundation-staff-archive@gnome.org
-
 # On request from Emmanuele Bassi for clutter's project blog on blogs.g.o (averi - 08/10/2012)
 clutter@gnome.org ebassi@gmail.com
 
 # Lucas Rocha <lucasr@gnome.org> - GNOME Asia Summit
 asia-summit@gnome.org gnomecn@gmail.com, x2rich@gmail.com, emily.chen@sun.com, maggie.liu@sun.com, will@lashell.net, Brian.Cameron@Sun.COM, Alfred.Peng@Sun.COM
-
-# PiTivi Fundraising campaign
-pitivi-fundraiser@gnome.org saunierthibault@gmail.com, mduponchelle1@gmail.com
-pitivi@gnome.org zana@gnome.org, saunierthibault@gmail.com, mduponchelle1@gmail.com, president@gnome.org, foundation-staff-archive@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/440
 outreach@gnome.org sri@gnome.org
@@ -231,7 +223,7 @@ gitlab-issues@gnome.org devnull
 
 ### OWP Aliases && SOC aliases
 gnome-opw-admins@gnome.org marinaz@redhat.com, karen@gnome.org, kittykat3756@gmail.com
-opw-admins@gnome.org marinaz@redhat.com, karen@gnome.org, zana@gnome.org, sarah@thesharps.us, foundation-staff-archive@gnome.org
+opw-admins@gnome.org marinaz@redhat.com, karen@gnome.org, sarah@thesharps.us, foundation-staff-archive@gnome.org
 
 ## Bug 634461
 opw-interns-2010@gnome.org tiffany.antopolski@gmail.com, nancibonfim@gmail.com, luciana@fujii.eti.br, genia.likes.science@gmail.com, stringarray@gmail.com, hellyna@hellyna.com, chandniverma2112@gmail.com
@@ -320,9 +312,6 @@ conduct@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1100
 coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org, christopherdavis@gnome.org, carlosg@gnome.org, foundation-staff-archive@gnome.org
-
-# GUADEC shop, requested by Kristi Progri on 2020-05-08
-shop@gnome.org zana@gnome.org, kprogri@gnome.org, president@gnome.org, foundation-staff-archive@gnome.org
 
 # GUADEC headshots
 headshots@gnome.org guadec-headshots-list@gnome.org
@@ -413,7 +402,7 @@ board-list@gnome.org gitlab-servicedesk-forwarder@gnome.org
 code-of-conduct-committee@gnome.org gitlab-servicedesk-forwarder@gnome.org
 docs-feedback@gnome.org gitlab-servicedesk-forwarder@gnome.org
 ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org, pacho@gentoo.org, kalevlember@gmail.com, jbicha@ubuntu.com, emilyyrose@gmail.com, casaxa@gmail.com, nathan.teodosio@canonical.com, jarred.wilson12@gmail.com, alessandro.astone@canonical.com
-fundraising@gnome.org board@gnome.org, zana@gnome.org, president@gnome.org, foundation-staff-archive@gnome.org
+fundraising@gnome.org board@gnome.org, president@gnome.org, foundation-staff-archive@gnome.org
 gitlab-abuse-reports@gnome.org gitlab-servicedesk-forwarder@gnome.org
 travel-committee@gnome.org travel-committee@discourse.gnome.org
 
