--- a/roles/rspamd/templates/local.d/gpt.conf.j2
+++ b/roles/rspamd/templates/local.d/gpt.conf.j2
@@ -1,7 +1,7 @@
 enabled = true;
-url = "https://openrouter.ai/api/v1/chat/completions";
+url = "https://litellm.apps.openshift.gnome.org/v1/chat/completions";
 api_key = "{{ rspamd_gpt_api_key }}";
-model = "google/gemini-2.5-flash-lite-preview-09-2025";
+model = "gpt-oss-120b";
 autolearn = true;
 
 symbols_to_except = {
