Remove Karen Sandler from board-internal
https://discourse.gnome.org/t/board-of-directors-resignation-thanks-to-karen-sandler/32594

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -50,7 +50,7 @@ gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 
 # Board of Directors
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
-board-internal@gnome.org aday@gnome.org, arunsr@gnome.org, cassidyjames@gnome.org, deepa@gnome.org, federico@gnome.org, jsparber@gnome.org, karen@punkrocklawyer.com, lwildberg@gnome.org, mmajadas@gnome.org, ramcq@gnome.org
+board-internal@gnome.org aday@gnome.org, arunsr@gnome.org, cassidyjames@gnome.org, deepa@gnome.org, federico@gnome.org, jsparber@gnome.org, lwildberg@gnome.org, mmajadas@gnome.org, ramcq@gnome.org
 
 # Foundation general
 info@gnome.org president@gnome.org,kprogri@gnome.org,akuci@gnome.org
