Update online account contacts

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -155,10 +155,10 @@ twitter-photos@gnome.org debarshir@gnome.org, mailumangjain@gmail.com
 gnomesummit-twitter@gnome.org gnome-sysadmin@gnome.org
 
 # Microsoft licenses
-microsoft@gnome.org av@gnome.org, csoriano@gnome.org, andyholmes@gnome.org
+microsoft@gnome.org av@gnome.org, andyholmes@gnome.org, president@gnome.org
 
 # GOA - Google
-google@gnome.org andyholmes@gnome.org, mcrha@redhat.com
+google@gnome.org andyholmes@gnome.org, mcrha@redhat.com, president@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/311
 gsod-team@gnome.org pmkovar@gnome.org, ebassi@gnome.org, alexbalut@gnome.org, kprogri@gnome.org, sri@gnome.org
