rspamd: Set GPT max_tokens to 500

--- a/roles/rspamd/templates/local.d/gpt.conf.j2
+++ b/roles/rspamd/templates/local.d/gpt.conf.j2
@@ -2,6 +2,7 @@ enabled = true;
 url = "https://litellm.apps.openshift.gnome.org/v1/chat/completions";
 api_key = "{{ rspamd_gpt_api_key }}";
 model = "gpt-oss-120b";
+max_tokens = 500;
 autolearn = true;
 
 symbols_to_except = {
