support@g.o is not actively monitored, make sure it gets added to why the email bounced back (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/2152)

--- a/roles/postfix.server/templates/access-recipient.j2
+++ b/roles/postfix.server/templates/access-recipient.j2
@@ -24,6 +24,7 @@ gitmaster@gnome.org REJECT This alias has been disabled. Ways to contact the GNO
 dnsmaster@gnome.org REJECT This alias has been disabled. Ways to contact the GNOME Infrastructure Team are available at https://wiki.gnome.org/Infrastructure/Contact.
 accounts@gnome.org REJECT This alias has been disabled. Ways to contact the GNOME Infrastructure Team are available at https://wiki.gnome.org/Infrastructure/Contact.
 secresp@gnome.org REJECT This alias has been disabled. Ways to contact the GNOME Infrastructure Team are available at https://wiki.gnome.org/Infrastructure/Contact.
+support@gnome.org REJECT The GNOME Foundation doesn't offer any support services and as such this alias is not actively monitored.
 
 bin@		REJECT Spammer go away
 daemon@		REJECT Spammer go away
