--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -403,7 +403,9 @@ docs-feedback@gnome.org gitlab-servicedesk-forwarder@gnome.org
 ftp-release-notifications@gnome.org zaitor@opensuse.org, leio@gentoo.org, mattst88@gentoo.org, heftig@archlinux.org, luc14n0@opensuse.org, pacho@gentoo.org, kalevlember@gmail.com, jbicha@ubuntu.com, emilyyrose@gmail.com, casaxa@gmail.com, nathan.teodosio@canonical.com, jarred.wilson12@gmail.com, alessandro.astone@canonical.com
 fundraising@gnome.org board@gnome.org, president@gnome.org, foundation-staff-archive@gnome.org
 gitlab-abuse-reports@gnome.org gitlab-servicedesk-forwarder@gnome.org
-travel-committee@gnome.org travel-committee@discourse.gnome.org
+
+# https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/2158
+travel-committee@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # data erasure requests
 dsr@gnome.org gitlab-servicedesk-forwarder@gnome.org
